--- a/src/tiketkeretaapi/jadwal/frameInputJdw.form
+++ b/src/tiketkeretaapi/jadwal/frameInputJdw.form
@@ -51,16 +51,16 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jComboBox1" alignment="0" min="-2" pref="608" max="-2" attributes="0"/>
+                      <Component id="cbHari" alignment="0" min="-2" pref="608" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lbJamBerangkat" min="-2" pref="108" max="-2" attributes="0"/>
-                                  <Component id="dtBrkt" min="-2" pref="295" max="-2" attributes="0"/>
+                                  <Component id="tpBrkt" min="-2" pref="295" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="dtTiba" min="-2" pref="295" max="-2" attributes="0"/>
+                                  <Component id="tpTiba" min="-2" pref="295" max="-2" attributes="0"/>
                                   <Component id="lbJamTiba" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -129,7 +129,7 @@
                   </Group>
                   <Component id="lbHari" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jComboBox1" min="-2" pref="34" max="-2" attributes="0"/>
+                  <Component id="cbHari" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lbJamBerangkat" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -137,8 +137,8 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="dtBrkt" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                      <Component id="dtTiba" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="tpBrkt" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="tpTiba" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="btSubmit" min="-2" pref="29" max="-2" attributes="0"/>
@@ -198,6 +198,9 @@
                 <StringItem index="0" value="============PILIH============"/>
               </StringArray>
             </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
+            </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -218,6 +221,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JSpinner" name="spHarga">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lbAsal">
           <Properties>
@@ -306,13 +314,23 @@
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btSubmitMouseClicked"/>
           </Events>
         </Component>
-        <Component class="com.github.lgooddatepicker.components.TimePicker" name="dtBrkt">
+        <Component class="com.github.lgooddatepicker.components.TimePicker" name="tpBrkt">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
+            </Property>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new TimePicker(ts)"/>
             <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="TimePickerSettings ts = new TimePickerSettings();&#xa;ts.use24HourClockFormat();&#xa;ts.generatePotentialMenuTimes(TimeIncrement.OneHour, null, null);"/>
           </AuxValues>
         </Component>
-        <Component class="com.github.lgooddatepicker.components.TimePicker" name="dtTiba">
+        <Component class="com.github.lgooddatepicker.components.TimePicker" name="tpTiba">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
+            </Property>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new TimePicker(ts)"/>
           </AuxValues>
@@ -323,6 +341,9 @@
               <StringArray count="1">
                 <StringItem index="0" value="============PILIH============"/>
               </StringArray>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -336,12 +357,15 @@
                 <StringItem index="0" value="============PILIH============"/>
               </StringArray>
             </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
+            </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="cbHari">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="8">
@@ -354,6 +378,9 @@
                 <StringItem index="6" value="Sabtu"/>
                 <StringItem index="7" value="Minggu"/>
               </StringArray>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="12" style="0"/>
             </Property>
           </Properties>
           <AuxValues>
