--- a/src/tiketkeretaapi/adminFrame.form
+++ b/src/tiketkeretaapi/adminFrame.form
@@ -387,7 +387,7 @@
               <Color blue="b5" green="ad" red="0" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Hand Cursor"/>
             </Property>
           </Properties>
           <Events>
