--- a/src/tiketkeretaapi/transaksi/frameDataTrk.form
+++ b/src/tiketkeretaapi/transaksi/frameDataTrk.form
@@ -69,22 +69,22 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnAddTransaksi">
           <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/icons8_plus_+_16px.png"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Tambah Data"/>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="46" green="3e" red="39" type="rgb"/>
-            </Property>
-            <Property name="borderPainted" type="boolean" value="false"/>
-            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Montserrat" size="12" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/icons/icons8_plus_+_16px.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Tambah Data"/>
+            <Property name="borderPainted" type="boolean" value="false"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[132, 25]"/>
@@ -105,7 +105,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="0">
-                    <Column editable="false" title="NO" type="java.lang.Integer"/>
+                    <Column editable="false" title="NO" type="java.lang.String"/>
                     <Column editable="false" title="KODE" type="java.lang.String"/>
                     <Column editable="false" title="JUMLAH PENUMPANG" type="java.lang.String"/>
                     <Column editable="false" title="TANGGAL BERANGKAT" type="java.lang.String"/>
