--- a/src/login/frameAuth.form
+++ b/src/login/frameAuth.form
@@ -89,7 +89,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btSubmitMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btSubmitActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tfUsername">
@@ -97,6 +97,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Montserrat" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="admin"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[75, 50]"/>
             </Property>
@@ -125,6 +126,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="tfPassword">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="admin"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
