--- a/src/tiketkeretaapi/kereta/frameDataKrt.form
+++ b/src/tiketkeretaapi/kereta/frameDataKrt.form
@@ -102,23 +102,11 @@
             <Component class="javax.swing.JTable" name="tbKereta">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="2">
-                    <Column editable="true" title="NO" type="java.lang.Integer">
-                      <Data value="1"/>
-                      <Data value="2"/>
-                    </Column>
-                    <Column editable="true" title="KODE KERETA" type="java.lang.String">
-                      <Data value="KRT-T431LD"/>
-                      <Data value="KRT-LOS9FD"/>
-                    </Column>
-                    <Column editable="true" title="NAMA KERETA" type="java.lang.String">
-                      <Data value="Bima"/>
-                      <Data value="Argopuro"/>
-                    </Column>
-                    <Column editable="true" title="JUMLAH PENUMPANG" type="java.lang.Integer">
-                      <Data value="200"/>
-                      <Data value="175"/>
-                    </Column>
+                  <Table columnCount="4" rowCount="0">
+                    <Column editable="false" title="NO" type="java.lang.String"/>
+                    <Column editable="true" title="KODE KERETA" type="java.lang.String"/>
+                    <Column editable="true" title="NAMA KERETA" type="java.lang.String"/>
+                    <Column editable="true" title="JUMLAH PENUMPANG" type="java.lang.String"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
