--- a/src/login/frameAuth.form
+++ b/src/login/frameAuth.form
@@ -98,7 +98,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Montserrat" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="admin"/>
+            <Property name="text" type="java.lang.String" value="123"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[75, 50]"/>
             </Property>
@@ -128,7 +128,7 @@
         </Component>
         <Component class="javax.swing.JPasswordField" name="tfPassword">
           <Properties>
-            <Property name="text" type="java.lang.String" value="admin"/>
+            <Property name="text" type="java.lang.String" value="123"/>
           </Properties>
         </Component>
       </SubComponents>
