--- a/src/tiketkeretaapi/mainFrame.form
+++ b/src/tiketkeretaapi/mainFrame.form
@@ -88,9 +88,12 @@
               <Color blue="b5" green="ad" red="0" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="sbMenuDashboardMouseClicked"/>
+          </Events>
 
           <Layout>
             <DimensionLayout dim="0">
